src/test/deca/syntax/invalid/if_test4.deca
//Description
//    Vérifier le if
//
//Résultats :
//    Erreur Syntaxique ligne 10
//

{
if(a){} else({});
}
